--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,10 @@ repos:
     rev: 21.12b0
     hooks:
     -   id: black
+- repo: local
+  hooks:
+    - id: custom-script-py
+      name: custom-script-py
+      entry: python custom.py
+      language: python
+      pass_filenames: false
