--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,9 +6,10 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 -   repo: https://github.com/psf/black
-    rev: 21.12b0
+    rev: stable
     hooks:
-    -   id: black
+    - id: black
+      language_version: python3.10
 -   repo: local
     hooks:
       - id: custom-script-py
